localization/v2.5.x/site/en/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: This page provides a list of tutorials for you to interact with Milvus.
title: Tutorials Overview
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Tutorials Overview<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>This page provides a list of tutorials for you to interact with Milvus.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Use Case</th><th>Related Milvus Features</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/v2.5.x/build-rag-with-milvus.md">Build RAG with Milvus</a></td><td>RAG</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/how_to_enhance_your_rag.md">Advanced RAG</a></td><td>RAG</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/full_text_search_with_milvus.md">Full Text Search with Milvus</a></td><td>Quickstart</td><td>Full-Text Search</td></tr>
<tr><td><a href="/docs/v2.5.x/hybrid_search_with_milvus.md">Hybrid Search with Milvus</a></td><td>Hybrid Search</td><td>hybrid search, multi vector, dense embedding, sparse embedding</td></tr>
<tr><td><a href="/docs/v2.5.x/image_similarity_search.md">Image Search with Milvus</a></td><td>Semantic Search</td><td>vector search, dynamic field</td></tr>
<tr><td><a href="/docs/v2.5.x/multimodal_rag_with_milvus.md">Multimodal RAG with Milvus</a></td><td>RAG</td><td>vector search, dynamic field</td></tr>
<tr><td><a href="/docs/v2.5.x/multimodal_rag_with_milvus.md">Multimodal Search using Multi Vectors</a></td><td>Semantic Search</td><td>multi vector, hybrid search</td></tr>
<tr><td><a href="/docs/v2.5.x/graph_rag_with_milvus.md">Graph RAG with Milvus</a></td><td>RAG</td><td>graph search</td></tr>
<tr><td><a href="/docs/v2.5.x/contextual_retrieval_with_milvus.md">Contextual Retrieval with Milvus</a></td><td>Quickstart</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/hdbscan_clustering_with_milvus.md">HDBSCAN Clustering with Milvus</a></td><td>Quickstart</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/use_ColPali_with_milvus.md">Use ColPali for Multi-Modal Retrieval with Milvus</a></td><td>Quickstart</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/quickstart_with_attu.md">Quickstart with Attu</a></td><td>Quickstart</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/use-async-milvus-client-with-asyncio.md">Use AsyncMilvusClient with asyncio</a></td><td>AsyncIO</td><td>AsyncIO, vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/text_image_search.md">Text-to-Image Search with Milvus</a></td><td>Semantic Search</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/vector_visualization.md">Vector Visualization</a></td><td>Quickstart</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/movie_recommendation_with_milvus.md">Movie Recommendation with Milvus</a></td><td>Recommendation System</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/funnel_search_with_matryoshka.md">Funnel Search with Matryoshka Embeddings</a></td><td>Quickstart</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/question_answering_system.md">Question Answering System</a></td><td>Question Answering</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/recommendation_system.md">Recommender System</a></td><td>Recommendation System</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/video_similarity_search.md">Video Similarity Search</a></td><td>Semantic Search</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/audio_similarity_search.md">Audio Similarity Search</a></td><td>Semantic Search</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/dna_sequence_classification.md">DNA Classification</a></td><td>Classification</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/text_search_engine.md">Text Search Engine</a></td><td>Semantic Search</td><td>vector search</td></tr>
<tr><td><a href="/docs/v2.5.x/image_deduplication_system.md">Image Deduplication</a></td><td>Deduplication</td><td>vector search</td></tr>
</tbody>
</table>
